[package]
name = "ghtool"
version = "0.9.0"
edition = "2021"
description = "A command-line tool for interacting with Github API with some specialized features oriented around Checks"
license = "MIT"
repository = "https://github.com/raine/ghtool"
readme = "../README.md"

[[bin]]
name = "ght"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
cynic = { version = "3.1.0", features = ["serde_json", "http-reqwest"] }
eyre = "0.6.8"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "ansi"]}
cynic-github-schema = { path = "../github_schema", version = "0.1.0" }
serde = "1.0.164"
http = "0.2.9"
toml = "0.7.4"
regex = "1.8.4"
dirs = "5.0.1"
futures = "0.3.28"
strip-ansi-escapes = "0.1.1"
lazy_static = "1.4.0"
clap = { version = "4.3.3", features = ["derive"] }
term_size = "0.3.2"
sled = { version = "0.34.7", features = ["compression"] }
reqwest = { version = "0.11.18", features = ["stream"] }
bytes = "1.4.0"
indicatif = "0.17.5"
open = "5.0.0"
keyring = "2.0.4"
chrono = "0.4.26"
thiserror = "1.0.47"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
cynic-codegen = { version = "3.1.0", features = ["rkyv"] }
